fix:getLast方法修改